kubernetes/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: exp-management
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: exp-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: sebu5683/expense-manager-backend:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: backend-data
              mountPath: /root
      volumes:
        - name: backend-data
          persistentVolumeClaim:
            claimName: backend-pvc
