kubernetes/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: exp-management
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: exp-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: sebu5683/expense-manager-frontend:latest
          ports:
            - containerPort: 80
